--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
         </main>
     </div>
 
+<script src="./assets/js/diagnosis.js"></script>
+    
+    <script src="./assets/js/terminal_handler.js"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./assets/js/adminlte.js"></script>
 </body>
