--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
         </main>
     </div>
 <script src="./assets/js/expert_ui.js"></script>
+    <script src="./assets/js/rlhf_handler.js"></script>
     
     
 <script src="./assets/js/solo_mode.js"></script>
