--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
     </div>
 <script src="./assets/js/expert_ui.js"></script>
     <script src="./assets/js/rlhf_handler.js"></script>
+    <script src="./assets/js/bridge_ui.js"></script>
     
     
 <script src="./assets/js/solo_mode.js"></script>
