--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
 
 
 
+    <script src="./assets/js/onion_visualizer.js"></script>
     
 <script src="./assets/js/expert_ui.js"></script>
     <script src="./assets/js/rlhf_handler.js"></script>
