--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
     <script src="./assets/js/onion_visualizer.js"></script>
     <script src="./assets/js/reasoning_hud.js"></script>
     <script src="./assets/js/mesh_visualizer.js"></script>
+    <script src="./assets/js/multimodal_hud.js"></script>
     
 <script src="./assets/js/expert_ui.js"></script>
     <script src="./assets/js/rlhf_handler.js"></script>
