--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
     <script src="./assets/js/reasoning_hud.js"></script>
     <script src="./assets/js/mesh_visualizer.js"></script>
     <script src="./assets/js/multimodal_hud.js"></script>
+    <script src="./assets/js/sandbox_hud.js"></script>
     
 <script src="./assets/js/expert_ui.js"></script>
     <script src="./assets/js/rlhf_handler.js"></script>
