--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
                                 <p>Constitution Logs</p>
                             </a>
                         </li>
+
+
+                        <li class="nav-item">
+    <a href="#" class="nav-link">
+        <i class="nav-icon bi bi-cloud-arrow-up text-info"></i>
+        <p>Cloud Node: <span id="cloud-node-status" class="badge bg-info">SCANNING</span></p>
+    </a>
+                        </li>
+                        
+
+
+
                         
                         <li class="nav-header text-secondary">SYSTEM</li>
                         <li class="nav-item">
