--- a/index.html
+++ b/index.html
@@ -162,6 +162,15 @@
                         </div>
                     </div>
 
+
+                        <div id="voice-wave-container" style="display:none; padding: 10px; background: rgba(0, 255, 65, 0.05); border-bottom: 1px solid #1a1a1a;"></div>
+
+
+
+
+
+
+                    
                     <div class="row mt-4">
                         <div class="col-12 text-center">
                             <p class="text-secondary small mb-2">How is the AI performing?</p>
@@ -182,7 +191,8 @@
     <script src="./assets/js/mesh_visualizer.js"></script>
     <script src="./assets/js/multimodal_hud.js"></script>
     <script src="./assets/js/sandbox_hud.js"></script>
-    <div id="voice-wave-container" style="display:none; padding: 10px; background: rgba(0, 255, 65, 0.05); border-bottom: 1px solid #1a1a1a;"></div>
+
+    <script src="./assets/js/cloud_hud.js"></script>
     
 <script src="./assets/js/expert_ui.js"></script>
     <script src="./assets/js/rlhf_handler.js"></script>
