--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 
     <link rel="stylesheet" href="./assets/css/adminlte.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.min.css">
+
+<link rel="manifest" href="/manifest.json">
+<script src="./assets/js/pwa_handler.js"></script>
+    
+
+
+
+    
 </head>
 
 <body class="layout-fixed sidebar-expand-lg bg-body-tertiary" data-bs-theme="dark">
