--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@
     </div>
 
 
-
+<script src="./assets/js/repair_hud.js"></script>
+    
     <script src="./assets/js/onion_visualizer.js"></script>
     <script src="./assets/js/reasoning_hud.js"></script>
     <script src="./assets/js/mesh_visualizer.js"></script>
